feat: 支持默认配置文件之外的配置